--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="./pages/style.css">
-</head>
-<header>
+  <head>
+    <title>Spots</title>
+    <link rel="stylesheet" type="text/css" href="./pages/style.css" />
+  </head>
+  <header class="header">
+    <nav class="nav">
+      <img src="./images/svg/spots-logo.svg" alt="" class="nav__logo" />
+    </nav>
     <h1>Home</h1>
-</header>
-<body>
-    <h1>Home</h1>
-    <p>Welcome to the home page.</p>
-    <p><a href="about.php">About</a></p>
-</body>
-<footer>
+  </header>
+  <body class="content">
+    <div class="content__cards">
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content_card_description"></p>
+        <a href="" class="conent__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content__card_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content__card_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content_c_ard_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content__card_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content__card_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+      <div class="content__card">
+        <img src="" alt="" class="content__card_image" />
+        <p class="content__card_description"></p>
+        <a href="" class="content__card_like"></a>
+      </div>
+    </div>
+  </body>
+  <footer>
     <p>&copy; Elvin Lucero 2025</p>
+  </footer>
 </html>
