--- a/index.html
+++ b/index.html
@@ -13,33 +13,59 @@
   <body class="content">
     <div class="content__cards">
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content_card_description"></p>
+        <img
+          src="./images/jpg/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
+          alt="Picture of Val Thorens by Moritz Feldmann"
+          class="content__card_image"
+        />
+        <p class="content_card_description">Val Thorens</p>
         <a href="" class="conent__card_like"></a>
       </div>
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content__card_description"></p>
+        <img
+          src="./images/jpg/2-photo-by-ceiline-from-pexels-min.jpg"
+          alt="Picture of restaurant terrace by Ceiline"
+          class="content__card_image"
+        />
+        <p class="content__card_description">Restaurant terrace</p>
         <a href="" class="content__card_like"></a>
       </div>
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content__card_description"></p>
+        <img
+          src="./images/jpg/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
+          alt="Picture of an outdoor cafe by Tubanur Dogan"
+          class="content__card_image"
+        />
+        <p class="content__card_description">An outdoor cafe</p>
         <a href="" class="content__card_like"></a>
       </div>
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content_c_ard_description"></p>
+        <img
+          src="./images/jpg/4-photo-by-maurice-laschet-from-pexels-min.jpg"
+          alt="Picture of bridge over forrest by Maurice Laschet"
+          class="content__card_image"
+        />
+        <p class="content_c_ard_description">
+          A very long bridge, over the forest...
+        </p>
         <a href="" class="content__card_like"></a>
       </div>
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content__card_description"></p>
+        <img
+          src="./images/jpg/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
+          alt="Picture of tunnel with light by Van Anh Nguyen"
+          class="content__card_image"
+        />
+        <p class="content__card_description">Tunnel with morning light</p>
         <a href="" class="content__card_like"></a>
       </div>
       <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content__card_description"></p>
+        <img
+          src="./images/jpg/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
+          alt="Picture of mountain house by Moritz Feldmann"
+          class="content__card_image"
+        />
+        <p class="content__card_description">Mountain house</p>
         <a href="" class="content__card_like"></a>
       </div>
       <div class="content__card">
