Added default language in html tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="./pages/style.css">
@@ -7,7 +7,7 @@
 <header>
     <h1>Home</h1>
 </header>
-<body>
+<body class="page">
     <h1>Home</h1>
     <p>Welcome to the home page.</p>
     <p><a href="about.php">About</a></p>
