language update on html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Spots</title>
     <link rel="stylesheet" type="text/css" href="./pages/style.css" />
   </head>
   <header class="header">
     <nav class="nav">
-      <img src="./images/svg/spots-logo.svg" alt="" class="nav__logo" />
+      <img
+        src="./images/svg/spots-logo.svg"
+        alt="Spots Logo"
+        class="nav__logo"
+      />
     </nav>
     <h1>Home</h1>
   </header>
