Fixed index.css not being applied properly to html and added favicon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Spots" />
+    <meta name="author" content="Elvin Lucero" />
+    <meta
+      name="keywords"
+      content="HTML, CSS, Spots, travel, photography, nature, adventure"
+    />
+    <link rel="stylesheet" type="text/css" href="./pages/index.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <title>Spots</title>
-    <link rel="stylesheet" type="text/css" href="./pages/style.css" />
   </head>
   <header class="header">
     <nav class="nav">
