Added additional icons required for project and organized images folder

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
   </head>
   <header class="header">
     <nav class="nav">
-      <img
-        src="./images/svg/spots-logo.svg"
-        alt="Spots Logo"
-        class="nav__logo"
-      />
+      <img src="./images/spots-logo.svg" alt="Spots Logo" class="nav__logo" />
     </nav>
     <h1>Home</h1>
   </header>
@@ -27,7 +23,7 @@
     <div class="content__cards">
       <div class="content__card">
         <img
-          src="./images/jpg/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
+          src="./images/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
           alt="Picture of Val Thorens by Moritz Feldmann"
           class="content__card_image"
         />
@@ -36,7 +32,7 @@
       </div>
       <div class="content__card">
         <img
-          src="./images/jpg/2-photo-by-ceiline-from-pexels-min.jpg"
+          src="./images/2-photo-by-ceiline-from-pexels-min.jpg"
           alt="Picture of restaurant terrace by Ceiline"
           class="content__card_image"
         />
@@ -45,7 +41,7 @@
       </div>
       <div class="content__card">
         <img
-          src="./images/jpg/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
+          src="./images/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
           alt="Picture of an outdoor cafe by Tubanur Dogan"
           class="content__card_image"
         />
@@ -54,7 +50,7 @@
       </div>
       <div class="content__card">
         <img
-          src="./images/jpg/4-photo-by-maurice-laschet-from-pexels-min.jpg"
+          src="./images/4-photo-by-maurice-laschet-from-pexels-min.jpg"
           alt="Picture of bridge over forrest by Maurice Laschet"
           class="content__card_image"
         />
@@ -65,7 +61,7 @@
       </div>
       <div class="content__card">
         <img
-          src="./images/jpg/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
+          src="./images/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
           alt="Picture of tunnel with light by Van Anh Nguyen"
           class="content__card_image"
         />
@@ -74,7 +70,7 @@
       </div>
       <div class="content__card">
         <img
-          src="./images/jpg/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
+          src="./images/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
           alt="Picture of mountain house by Moritz Feldmann"
           class="content__card_image"
         />
