--- a/index.html
+++ b/index.html
@@ -13,78 +13,88 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <title>Spots</title>
   </head>
-  <header class="header">
-    <nav class="nav">
-      <img src="./images/spots-logo.svg" alt="Spots Logo" class="nav__logo" />
-    </nav>
-    <h1>Home</h1>
-  </header>
-  <body class="content">
-    <div class="content__cards">
-      <div class="content__card">
-        <img
-          src="./images/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
-          alt="Picture of Val Thorens by Moritz Feldmann"
-          class="content__card_image"
-        />
-        <p class="content_card_description">Val Thorens</p>
-        <a href="" class="conent__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img
-          src="./images/2-photo-by-ceiline-from-pexels-min.jpg"
-          alt="Picture of restaurant terrace by Ceiline"
-          class="content__card_image"
-        />
-        <p class="content__card_description">Restaurant terrace</p>
-        <a href="" class="content__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img
-          src="./images/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
-          alt="Picture of an outdoor cafe by Tubanur Dogan"
-          class="content__card_image"
-        />
-        <p class="content__card_description">An outdoor cafe</p>
-        <a href="" class="content__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img
-          src="./images/4-photo-by-maurice-laschet-from-pexels-min.jpg"
-          alt="Picture of bridge over forrest by Maurice Laschet"
-          class="content__card_image"
-        />
-        <p class="content_c_ard_description">
-          A very long bridge, over the forest...
-        </p>
-        <a href="" class="content__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img
-          src="./images/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
-          alt="Picture of tunnel with light by Van Anh Nguyen"
-          class="content__card_image"
-        />
-        <p class="content__card_description">Tunnel with morning light</p>
-        <a href="" class="content__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img
-          src="./images/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
-          alt="Picture of mountain house by Moritz Feldmann"
-          class="content__card_image"
-        />
-        <p class="content__card_description">Mountain house</p>
-        <a href="" class="content__card_like"></a>
-      </div>
-      <div class="content__card">
-        <img src="" alt="" class="content__card_image" />
-        <p class="content__card_description"></p>
-        <a href="" class="content__card_like"></a>
-      </div>
+  <body>
+    <div class="page">
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/spots-logo.svg"
+            alt="Spots Logo"
+            class="nav__logo"
+          />
+        </nav>
+        <h1>Home</h1>
+      </header>
+      <main class="content">
+        <div class="content__cards">
+          <div class="content__card">
+            <img
+              src="./images/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
+              alt="Picture of Val Thorens by Moritz Feldmann"
+              class="content__card_image"
+            />
+            <p class="content_card_description">Val Thorens</p>
+            <a href="" class="conent__card_heart">
+              <img src="./images/heart-icon.svg" alt="heart" />
+            </a>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/2-photo-by-ceiline-from-pexels-min.jpg"
+              alt="Picture of restaurant terrace by Ceiline"
+              class="content__card_image"
+            />
+            <p class="content__card_description">Restaurant terrace</p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
+              alt="Picture of an outdoor cafe by Tubanur Dogan"
+              class="content__card_image"
+            />
+            <p class="content__card_description">An outdoor cafe</p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/4-photo-by-maurice-laschet-from-pexels-min.jpg"
+              alt="Picture of bridge over forrest by Maurice Laschet"
+              class="content__card_image"
+            />
+            <p class="content_c_ard_description">
+              A very long bridge, over the forest...
+            </p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
+              alt="Picture of tunnel with light by Van Anh Nguyen"
+              class="content__card_image"
+            />
+            <p class="content__card_description">Tunnel with morning light</p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
+              alt="Picture of mountain house by Moritz Feldmann"
+              class="content__card_image"
+            />
+            <p class="content__card_description">Mountain house</p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+          <div class="content__card">
+            <img src="" alt="" class="content__card_image" />
+            <p class="content__card_description"></p>
+            <a href="" class="content__card_heart"></a>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <p>&copy; Elvin Lucero 2025</p>
+      </footer>
     </div>
   </body>
-  <footer>
-    <p>&copy; Elvin Lucero 2025</p>
-  </footer>
 </html>
