Fixed title header and created profile section

--- a/index.html
+++ b/index.html
@@ -16,16 +16,32 @@
   <body>
     <div class="page">
       <header class="header">
-        <nav class="nav">
-          <img
-            src="./images/spots-logo.svg"
-            alt="Spots Logo"
-            class="nav__logo"
-          />
-        </nav>
-        <h1>Home</h1>
+        <img
+          src="./images/spots-logo.svg"
+          alt="Spots Logo"
+          class="header__logo"
+        />
       </header>
       <main class="content">
+        <section class="profile">
+          <img
+            src="./images/avatar-min.jpg"
+            alt="Profile Avatar Image"
+            class="profile__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button class="profile__edit-button">
+              <img src="./images/pencil-icon.svg" alt="Pencil Icon" />
+              Edit Profile
+            </button>
+          </div>
+          <button class="profile__add-button">
+            <img src="./images/plus-icon.svg" alt="Plus Icon" />
+            New Post
+          </button>
+        </section>
         <div class="content__cards">
           <div class="content__card">
             <img
