--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         />
       </header>
       <main class="content">
-        <section class="profile">
+        <section class="profile page__section">
           <img
             src="./images/avatar-min.jpg"
             alt="Profile Avatar Image"
@@ -32,84 +32,91 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button class="profile__edit-button">
+            <button type="button" class="profile__edit-button">
               <img src="./images/pencil-icon.svg" alt="Pencil Icon" />
               Edit Profile
             </button>
           </div>
-          <button class="profile__add-button">
+          <button type="button" class="profile__add-button">
             <img src="./images/plus-icon.svg" alt="Plus Icon" />
             New Post
           </button>
         </section>
-        <div class="content__cards">
-          <div class="content__card">
-            <img
-              src="./images/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
-              alt="Picture of Val Thorens by Moritz Feldmann"
-              class="content__card_image"
-            />
-            <p class="content_card_description">Val Thorens</p>
-            <a href="" class="conent__card_heart">
-              <img src="./images/heart-icon.svg" alt="heart" />
-            </a>
-          </div>
-          <div class="content__card">
-            <img
-              src="./images/2-photo-by-ceiline-from-pexels-min.jpg"
-              alt="Picture of restaurant terrace by Ceiline"
-              class="content__card_image"
-            />
-            <p class="content__card_description">Restaurant terrace</p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-          <div class="content__card">
-            <img
-              src="./images/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
-              alt="Picture of an outdoor cafe by Tubanur Dogan"
-              class="content__card_image"
-            />
-            <p class="content__card_description">An outdoor cafe</p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-          <div class="content__card">
-            <img
-              src="./images/4-photo-by-maurice-laschet-from-pexels-min.jpg"
-              alt="Picture of bridge over forrest by Maurice Laschet"
-              class="content__card_image"
-            />
-            <p class="content_c_ard_description">
-              A very long bridge, over the forest...
-            </p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-          <div class="content__card">
-            <img
-              src="./images/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
-              alt="Picture of tunnel with light by Van Anh Nguyen"
-              class="content__card_image"
-            />
-            <p class="content__card_description">Tunnel with morning light</p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-          <div class="content__card">
-            <img
-              src="./images/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
-              alt="Picture of mountain house by Moritz Feldmann"
-              class="content__card_image"
-            />
-            <p class="content__card_description">Mountain house</p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-          <div class="content__card">
-            <img src="" alt="" class="content__card_image" />
-            <p class="content__card_description"></p>
-            <a href="" class="content__card_heart"></a>
-          </div>
-        </div>
+        <section class="cards page__section">
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels-min.jpg"
+                alt="Picture of Val Thorens by Moritz Feldmann"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/2-photo-by-ceiline-from-pexels-min.jpg"
+                alt="Picture of restaurant terrace by Ceiline"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Restaurant terrace</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/3-photo-by-tubanur-dogan-from-pexels-min.jpg"
+                alt="Picture of an outdoor cafe by Tubanur Dogan"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">An outdoor cafe</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/4-photo-by-maurice-laschet-from-pexels-min.jpg"
+                alt="Picture of bridge over forrest by Maurice Laschet"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">
+                  A very long bridge, over the forest...
+                </h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/5-photo-by-van-anh-nguyen-from-pexels-min.jpg"
+                alt="Picture of tunnel with light by Van Anh Nguyen"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Tunnel with morning light</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/6-photo-by-moritz-feldmann-from-pexels-min.jpg"
+                alt="Picture of mountain house by Moritz Feldmann"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Mountain house</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
       <footer class="footer">
-        <p>&copy; Elvin Lucero 2025</p>
+        <p>2025 &copy; Spots</p>
       </footer>
     </div>
   </body>
