--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p>2025 &copy; Spots</p>
+        <p class="footer__text">2025 &copy; Spots</p>
       </footer>
     </div>
   </body>
