--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
         <p class="footer__text">2023 &copy; Spots</p>
       </footer>
     </div>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
