--- a/index.html
+++ b/index.html
@@ -119,6 +119,22 @@
         <p class="footer__text">2023 &copy; Spots</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button type="submit" class="close-btn"></button>
+        <h2 class="modal__title">Edit profile</h2>
+        <form name="edit-profile" class="modal__form">
+          <label for="name" class="modal__label">
+            Name
+            <input id="name" type="text" class="modal__input">
+          </label<label for="description" class="modal__label">
+            Description
+            <input id="description" type="text" class="modal__input">
+          </label>
+          <button type="submit" class="submit-btn"></button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
