--- a/index.html
+++ b/index.html
@@ -119,19 +119,30 @@
         <p class="footer__text">2023 &copy; Spots</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal modal__opened">
       <div class="modal__container">
-        <button type="submit" class="close-btn"></button>
+        <button type="submit" class="modal__close-btn"></button>
         <h2 class="modal__title">Edit profile</h2>
         <form name="edit-profile" class="modal__form">
           <label for="name" class="modal__label">
             Name
-            <input id="name" type="text" class="modal__input">
-          </label<label for="description" class="modal__label">
-            Description
-            <input id="description" type="text" class="modal__input">
+            <input
+              id="name"
+              type="text"
+              class="modal__input"
+              placeholder="Name"
+            />
           </label>
-          <button type="submit" class="submit-btn"></button>
+          <label for="description" class="modal__label">
+            Description
+            <input
+              id="description"
+              type="text"
+              class="modal__input"
+              placeholder="Description"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
         </form>
       </div>
     </div>
