--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button type="button" class="profile__edit-button">
+            <button type="button" class="profile__edit-btn">
               <img src="./images/pencil-icon.svg" alt="Pencil Icon" />
               Edit Profile
             </button>
           </div>
-          <button type="button" class="profile__add-button">
+          <button type="button" class="profile__add-btn">
             <img src="./images/plus-icon.svg" alt="Plus Icon" />
             New Post
           </button>
@@ -52,7 +52,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -63,7 +63,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -74,7 +74,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -87,7 +87,7 @@
                 <h2 class="card__title">
                   A very long bridge, over the forest...
                 </h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -98,7 +98,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
@@ -109,7 +109,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-btn"></button>
               </div>
             </li>
           </ul>
@@ -118,32 +118,32 @@
       <footer class="footer">
         <p class="footer__text">2023 &copy; Spots</p>
       </footer>
-    </div>
-    <div class="modal modal__opened">
-      <div class="modal__container">
-        <button type="submit" class="modal__close-btn"></button>
-        <h2 class="modal__title">Edit profile</h2>
-        <form name="edit-profile" class="modal__form">
-          <label for="name" class="modal__label">
-            Name
-            <input
-              id="name"
-              type="text"
-              class="modal__input"
-              placeholder="Name"
-            />
-          </label>
-          <label for="description" class="modal__label">
-            Description
-            <input
-              id="description"
-              type="text"
-              class="modal__input"
-              placeholder="Description"
-            />
-          </label>
-          <button type="submit" class="modal__submit-btn">Save</button>
-        </form>
+      <div class="modal" id="edit-modal">
+        <div class="modal__container">
+          <button type="submit" class="modal__close-btn"></button>
+          <h2 class="modal__title">Edit profile</h2>
+          <form name="edit-profile" class="modal__form">
+            <label for="name" class="modal__label">
+              Name
+              <input
+                id="name"
+                type="text"
+                class="modal__input"
+                placeholder="Name"
+              />
+            </label>
+            <label for="description" class="modal__label">
+              Description
+              <input
+                id="description"
+                type="text"
+                class="modal__input"
+                placeholder="Description"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./scripts/index.js" defer></script>
