--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form">
-            <label for="name" class="modal__label">
+            <label for="profile-name-input" class="modal__label">
               Name
               <input
-                id="name"
+                id="profile-name-input"
                 type="text"
                 class="modal__input"
-                placeholder="Name"
+                placeholder="Type your name"
               />
             </label>
-            <label for="description" class="modal__label">
+            <label for="profile-description-input" class="modal__label">
               Description
               <input
-                id="description"
+                id="profile-description-input"
                 type="text"
                 class="modal__input"
-                placeholder="Description"
+                placeholder="Describe yourself"
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
