--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               <input
                 id="profile-name-input"
                 type="text"
+                name="name"
                 class="modal__input"
                 placeholder="Type your name"
               />
@@ -78,8 +79,39 @@
               <input
                 id="profile-description-input"
                 type="text"
+                name="description"
                 class="modal__input"
                 placeholder="Describe yourself"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">New Post</h2>
+          <form name="add-card" class="modal__form" id="add-card">
+            <label for="add-card-link" class="modal__label">
+              Image link
+              <input
+                id="add-card-link"
+                type="url"
+                name="link"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+              />
+            </label>
+            <label for="add-card-caption" class="modal__label">
+              Caption
+              <input
+                id="add-card-caption"
+                type="text"
+                name="caption"
+                class="modal__input"
+                placeholder="Type your caption"
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
