--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 minlength="2"
                 maxlength="40"
               />
-              <span class="modal__error">ERROR!!!</span>
+              <span id="profile-name-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Description
@@ -92,7 +92,7 @@
                 minlength="2"
                 maxlength="200"
               />
-              <span class="modal__error">ERROR!!!</span>
+              <span id="profile-description-error" class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -119,7 +119,7 @@
                 placeholder="Paste a link to the picture"
                 required
               />
-              <span class="modal__error">ERROR!!!</span>
+              <span id="card-link-error" class="modal__error"></span>
             </label>
             <label for="add-card-caption" class="modal__label">
               Caption
@@ -133,7 +133,7 @@
                 minlength="2"
                 maxlength="30"
               />
-              <span class="modal__error">ERROR!!!</span>
+              <span id="card-caption-error" class="modal__error"> </span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -152,5 +152,6 @@
       </div>
     </div>
     <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/validation.js" defer></script>
   </body>
 </html>
