Added visibility and removal of error states with red borders.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                 minlength="2"
                 maxlength="40"
               />
-              <span id="profile-name-input-error" class="profile-name-input-error modal__error"></span>
+              <span
+                id="profile-name-input-error"
+                class="profile-name-input-error modal__error"
+              ></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Description
@@ -92,7 +95,10 @@
                 minlength="2"
                 maxlength="200"
               />
-              <span id="profile-description-input-error" class="profile-description-input-error modal__error"></span>
+              <span
+                id="profile-description-input-error"
+                class="profile-description-input-error modal__error"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -119,7 +125,10 @@
                 placeholder="Paste a link to the picture"
                 required
               />
-              <span id="add-card-link-error" class="add-card-link-error modal__error"></span>
+              <span
+                id="add-card-link-error"
+                class="add-card-link-error modal__error"
+              ></span>
             </label>
             <label for="add-card-caption" class="modal__label">
               Caption
@@ -133,7 +142,11 @@
                 minlength="2"
                 maxlength="30"
               />
-              <span id="add-card-caption-error" class="add-card-caption-error modal__error"> </span>
+              <span
+                id="add-card-caption-error"
+                class="add-card-caption-error modal__error"
+              >
+              </span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
