--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-btn"></button>
-                  <button type="button" class="card__like-btn"></button>
                 </div>
               </li>
             </template>
@@ -100,7 +99,7 @@
                 class="profile-description-input-error modal__error"
               ></span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__button">Save</button>
           </form>
         </div>
       </div>
@@ -148,7 +147,7 @@
               >
               </span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__button">Save</button>
           </form>
         </div>
       </div>
